RESOLVED FIXED311476
Minor FontCascade cleanups: remove unused widthForCharacterInRun and fix operator==
https://bugs.webkit.org/show_bug.cgi?id=311476
Summary Minor FontCascade cleanups: remove unused widthForCharacterInRun and fix oper...
Chris Dumez
Reported 2026-04-04 05:18:10 PDT
Minor FontCascade cleanups: remove unused widthForCharacterInRun and fix operator==.
Attachments
Chris Dumez
Comment 1 2026-04-04 05:34:17 PDT
EWS
Comment 2 2026-04-04 16:13:39 PDT
Committed 310581@main (29664d3ed4b0): <https://commits.webkit.org/310581@main> Reviewed commits have been landed. Closing PR #62034 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-04-04 16:14:12 PDT
Note You need to log in before you can comment on or make changes to this bug.