Minor FontCascade cleanups: remove unused widthForCharacterInRun and fix operator== https://bugs.webkit.org/show_bug.cgi?id=311476

Reviewed by Vitor Roriz and Anne van Kesteren.

Remove widthForCharacterInRun() which has no callers.

In operator==, after confirming m_fonts pointers are equal, the
check `!m_fonts || !other.m_fonts` was redundant since both are the
same pointer. Simplified to `if (!m_fonts) return true` so that two
FontCascades with matching descriptions but no fonts are correctly
considered equal, rather than returning false and falling through
to dereference null.

* Source/WebCore/platform/graphics/FontCascade.cpp:
(WebCore::FontCascade::operator== const):
(WebCore::FontCascade::widthForCharacterInRun const): Deleted.
* Source/WebCore/platform/graphics/FontCascade.h:
* Tools/TestWebKitAPI/Tests/WebCore/FontCascade.cpp:
(TestWebKitAPI::TEST(FontCascadeTest, EqualityWithNullFonts)):

Canonical link: https://commits.webkit.org/310581@main